--- a/src/Components/Card.module.css
+++ b/src/Components/Card.module.css
@@ -1,23 +1,34 @@
-.cardDark{
-  background-color: #31313196;
-}
-
-.card:hover{
+.card:hover {
   border: 0.5px solid rgb(206, 217, 142);
 }
 
-.favButton{
-  width: 100%;
+.favButton {
+  width: 50%;
+
 }
 
-.card:hover{
+.card:hover {
   border: 0.5px solid rgb(206, 217, 142);
 }
-
-.CardBody{
+.card{
+  display:flex;
+  justify-content:space-around;
   width: 100%;
 }
 
-.title{
+.CardBody {
+  display:flex;
+  justify-content:space-around;
+  width: 100%;
+}
+
+.title {
   height: 2rem;
+}
+
+.buttonfav{
+  display:flex;
+  width:50%;
+  position: relative;
+  border-radius:40px;
 }
