--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -1,9 +1,6 @@
 .navbarBrand {
+  color: green;
   font-size: 30px;
-}
-
-.navbarBrand::first-letter {
-  color: #f21d1d;
 }
 
 .navBarLink {
@@ -15,7 +12,7 @@
   font-weight: 700;
 }
 
-.btnStyle{
+.btnStyle {
   width: 3rem;
   height: 3rem;
 }
